--- a/.gitignore
+++ b/.gitignore
@@ -1,64 +1,146 @@
-# 依赖目录
+# Dependencies
 node_modules/
-*/node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# 环境变量文件
+# Production builds
+dist/
+build/
+*.tgz
+*.tar.gz
+
+# Environment variables
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# 日志文件
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-lerna-debug.log*
-*.log
-
-# 构建输出
-build/
-dist/
-*/build/
-*/dist/
-
-# 临时文件
-*.tmp
-*.temp
-.cache/
-
-# IDE 文件
+# IDE and editors
 .vscode/
 .idea/
 *.swp
 *.swo
+*~
 
-# 操作系统文件
+# OS generated files
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
 
-# Docker 相关
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# Runtime data
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+# Docker
 .dockerignore
 
-# 数据库文件
-*.sqlite
+# Database
 *.db
+*.sqlite
+*.sqlite3
 
-# 备份文件
-*.backup
-*.sql
+# Temporary files
+tmp/
+temp/
+.tmp/
 
-# 测试覆盖率
+# Coverage directory used by tools like istanbul
 coverage/
-.nyc_output/
+*.lcov
 
-# TypeScript 编译输出
-*.tsbuildinfo
+# nyc test coverage
+.nyc_output
 
-# ESLint 缓存
+# Dependency directories
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
 .eslintcache
 
-# 密钥文件
-*.pem
-*.key
-*.crt
+# Microbundle cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variables file
+.env
+.env.test
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# Next.js build output
+.next
+
+# Nuxt.js build / generate output
+.nuxt
+
+# Gatsby files
+.cache/
+public
+
+# Storybook build outputs
+.out
+.storybook-out
+
+# Temporary folders
+tmp/
+temp/
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# OS
+.DS_Store
+.DS_Store?
+
+# Process files
+backend.pid
+*.pid
+
+# Docker volumes
+postgres_data/
+ldap_data/
+ldap_config/
+
+# SSH keys
+*.pub
+yes
+yes.pub
