--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
   "author": "HPC Management Team",
   "license": "MIT",
   "dependencies": {
+    "@types/node-cron": "^3.0.11",
     "@types/react-router-dom": "^5.3.3",
     "antd": "^5.26.4",
     "axios": "^1.10.0",
@@ -41,6 +42,7 @@
     "knex": "^3.1.0",
     "ldapjs": "^3.0.7",
     "morgan": "^1.10.0",
+    "node-cron": "^4.2.1",
     "pg": "^8.16.3",
     "react-router-dom": "^7.6.3"
   },
